force-app/main/default/objects/Product2/fields/New_Product_1__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1__c</fullName>
    <label>New Product 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Product_Values</valueSetName>
    </valueSet>
</CustomField>