force-app/main/default/objects/Product2/fields/New_Product_2__c.field-meta.xml
<CustomField>
    <fullName>New_Product_2__c</fullName>
    <label>New Product 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>