force-app/main/default/objects/Product2/fields/New_Product_3__c.field-meta.xml
<CustomField>
    <fullName>New_Product_3__c</fullName>
    <label>New Product 3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>