force-app/main/default/objects/Product2/fields/RevCloud_Created__c.field-meta.xml
<CustomField>
    <fullName>RevCloud_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RevCloud Created</label>
    <type>Checkbox</type>
</CustomField>