force-app/main/default/objects/Product2/fields/RevCloudExternalID__c.field-meta.xml
<CustomField>
    <fullName>RevCloudExternalID__c</fullName>
    <externalId>true</externalId>
    <label>RevCloudExternalID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>