force-app/main/default/objects/Product2/fields/Test_Create_1__c.field-meta.xml
<CustomField>
    <fullName>Test_Create_1__c</fullName>
    <label>Test Create 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>