force-app/main/default/objects/Product2/recordTypes/CPQ_Product_Record_Type_1.recordType-meta.xml
<RecordType>
    <fullName>CPQ_Product_Record_Type_1</fullName>
    <active>true</active>
    <label>CPQ Product Record Type 1</label>
</RecordType>