force-app/main/default/objects/Product2/recordTypes/Standard_Product_Record_Type_1.recordType-meta.xml
<RecordType>
    <fullName>Standard_Product_Record_Type_1</fullName>
    <active>true</active>
    <label>Standard Product Record Type 1</label>
</RecordType>